# pvz-game

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  REFACTOR_COMPLETE.md
.github/workflows/: deploy.yml
scripts/: config.lua
scripts/enemies/: all_enemies.lua
scripts/levels/: all_levels.lua
scripts/plants/: all_plants.lua
src/: main.cpp  pvz_data.hpp  pvz_hud.cpp  pvz_hud.hpp  pvz_renderer.cpp  pvz_scenes.cpp  pvz_scenes.hpp  pvz_systems.cpp  pvz_systems.hpp
src/core/: entity.cpp  entity.hpp  types.hpp
src/game/: enemy.cpp  enemy.hpp  game.cpp  game.hpp  plant.cpp  plant.hpp  projectile.cpp  projectile.hpp
src/lua/: lua_manager.cpp  lua_manager.hpp
src/systems/: renderer.cpp  renderer.hpp
src/ui/: ui_system.cpp  ui_system.hpp
src_backup_old_pvz/: main.cpp  pvz_components.hpp  pvz_font.cpp  pvz_font.hpp  pvz_renderer.hpp
tests/: test_main.cpp
web/: shell.html
